--- a/New_file.html
+++ b/New_file.html
@@ -6,5 +6,7 @@
 <body>
     <h1>webpage</h1>
     <p>this is a webpage </p>
+    <input type="text"/>
+    <input type="button" value="Click me"/>
 </body>
 </html>
