--- a/New_file.html
+++ b/New_file.html
@@ -4,10 +4,11 @@
 
     </head>
 <body>
+    <div class="p1">
     <h1>webpage design 1  </h1>
     <p>this is a webpage </p>
     <input type="text"/>
     <input type="button" value="Click me"/>
-
+    </div>
 </body>
 </html>
