--- a/New_file.html
+++ b/New_file.html
@@ -7,7 +7,8 @@
     <div class="p1">
     <h1>webpage design 1  </h1>
     <p>this is a webpage </p>
-    <input type="text"/>
+    <label title="age"></label>
+    <input type="number"/>
     <input type="button" value="Click me"/>
     </div>
 </body>
