--- a/New_file.html
+++ b/New_file.html
@@ -8,7 +8,7 @@
     <h1>webpage design 1  </h1>
     <p>this is a webpage </p>
     
-<input type="number" name="Age"/>
+<input type="number" value="Number one"/>
 <button id="b1">Enter</button>
 <script>
     var b = document.getElementById("b1");
