--- a/New_file.html
+++ b/New_file.html
@@ -14,7 +14,7 @@
     var b = document.getElementById("b1");
 
     function handleClick() {
-        alert("Button clicked!");
+        alert("Welcome!!");
     }
 
     b.onclick = handleClick;
