--- a/New_file.html
+++ b/New_file.html
@@ -9,7 +9,7 @@
     <p>this is a webpage </p>
     
 <input type="number" value="Number one"/>
-<button id="b1">Enter</button>
+<button id="b1">Enter name</button>
 <script>
     var b = document.getElementById("b1");
 
