Color changed again

--- a/New_file.html
+++ b/New_file.html
@@ -4,7 +4,7 @@
 
     </head>
 <body>
-    <div class="p1" style="background-color: #167bef;">
+    <div class="p1" style="background-color: #1a334f;">
     <h1>Webpage</h1>
     <p>this is a webpage </p>
     
